...
          ),
        }}
      />
      <Tabs.Screen
        name="(analysis)"
        options={{
          title: "Auswertung",
          tabBarIcon: ({ color, size }) => (
            <Ionicons accessible={false} color={color} name="stats-chart-outline" size={size} />
          ),
        }}
      />
      <Tabs.Screen
...
          ),
        }}
      />
      <Tabs.Screen
        name="(more)"
        options={{
          title: "Mehr",
          tabBarIcon: ({ color, size }) => (
            <Ionicons
              accessible={false}
              color={color}
              name="ellipsis-horizontal-circle-outline"
              size={size}
...
