appId: com.pflegeshift.app.internal
---
- runFlow: onboarding.yml
- tapOn:
    id: "calendar-day-current-.*"
    index: 10
    retryTapIfNoChange: true
- tapOn: "Schicht hinzufügen"
- assertVisible: "Meine Dienste"
- tapOn: "Früh direkt eintragen"
- extendedWaitUntil:
    visible: "Früh"
    timeout: 10000
- stopApp
- launchApp:
    clearState: false
- extendedWaitUntil:
    visible: "Früh"
    timeout: 15000
